[options]
setup_requires=setuptools>=42; wheel; ninst>=0.5.0; numpy>=1.14
install_requires=
    nibabel>=2.4.0
    nimpa>=2.0.0
    numpy>=1.14
    ninst>=0.4.0
    pydicom>=1.0.2
    tqdm>=4.27
[options.extras_require]
dev=
    wheel
    pytest
    pytest-cov
    pytest-timeout
    codecov

[tool:pytest]
timeout=300
addopts=-v --tb=short -rxs --cov=niftypet --cov-report=term-missing --cov-report=xml
