[metadata]
name=nipet
description=CUDA-accelerated Python utilities for high-throughput PET/MR image reconstruction and analysis
long_description=file: README.rst
long_description_content_type=text/x-rst
license=Apache 2.0
license_file=LICENCE
url=https://github.com/NiftyPET/NIPET
project_urls=
    Changelog=https://github.com/NiftyPET/NIPET/releases
    Documentation=https://niftypet.readthedocs.io
author=Pawel Markiewicz
author_email=p.markiewicz@ucl.ac.uk
maintainer=Casper da Costa-Luis
maintainer_email=casper.dcl@physics.org
keywords=PET, image reconstruction, analysis
classifiers=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Medical Science Apps.
[options]
zip_safe=False
setup_requires=setuptools>=42; wheel; ninst>=0.5.0; numpy>=1.14
install_requires=
    nibabel>=2.4.0
    nimpa>=2.0.0
    numpy>=1.14
    ninst>=0.4.0
    pydicom>=1.0.2
    tqdm>=4.27
include_package_data=True
packages=find:
python_requires=>=3.6
[options.extras_require]
dev=
    wheel
    pytest
    pytest-cov
    pytest-timeout
    pytest-xdist
    codecov
examples=jupyter; ipywidgets; matplotlib; brainweb;
[options.packages.find]
exclude=examples,tests

[tool:pytest]
timeout=3600
addopts=-v --tb=short -rxs -W=error -n=auto --durations=0 --durations-min=2 --cov=niftypet --cov-report=term-missing --cov-report=xml
